--- a/index.html
+++ b/index.html
@@ -7,12 +7,21 @@
 </head>
 <body>
 	<header>
-		<div class="logo"></div>
+		<div class="logo"><img src="img/bw/logoNotFonW.png" alt="logo"></div>
+		<!-- <div class="logo"></div> -->
 		<menu>
-			<li>Главная</li>
-			<li>Услуги</li>
-			<li>Контакты</li>
-			<li>О нас</li>
+			<li>
+				<a href="">Главная</a>
+			</li>
+			<li>
+				<a href="">Услуги</a>
+			</li>
+			<li>
+				<a href="">Контакты</a>
+			</li>
+			<li>
+				<a href="">О нас</a>
+			</li>
 		</menu>
 	</header>
 	<main>
@@ -26,11 +35,90 @@
 			</video>
 		</div>
 	</main>
-	<div class="hot-tour">
-		<div class="tour"></div>
-		<div class="tour"></div>
-		<div class="tour"></div>
-		<div class="tour"></div>
-	</div>
+	<section>
+		<h3>Hot Tour</h3>
+		<!-- <hr> <--></-->
+		<div class="hot-tour">
+			<div class="tour">
+				<div class="img one"></div>
+				<div class="caption-tour">
+					<div class="card-title">
+						<h4>Title</h4>
+					</div>
+					<div class="reviews-price">
+						<div class="review"></div>
+						<div class="price">
+							<p>From</p>
+							500$
+						</div>
+					</div>
+					<div class="card-footer">
+						<div class="add-favorite">♡</div>
+						<div class="buy">Book now</div>
+					</div>
+				</div>
+			</div>
+			<div class="tour">
+				<div class="img two"></div>
+				<div class="caption-tour">
+					<div class="card-title">
+						<h4>Title</h4>
+					</div>
+					<div class="reviews-price">
+						<div class="review"></div>
+						<div class="price">
+							<p>From</p>
+							750$
+						</div>
+					</div>
+					<div class="card-footer">
+						<div class="add-favorite">♡</div>
+						<div class="buy">Book now</div>
+					</div>
+				</div>
+			</div>
+			<div class="tour">
+				<div class="img three"></div>
+				<div class="caption-tour">
+					<div class="card-title">
+						<h4>Title</h4>
+					</div>
+					<div class="reviews-price">
+						<div class="review"></div>
+						<div class="price">
+							<p>From</p>
+							450$
+						</div>
+					</div>
+					<div class="card-footer">
+						<div class="add-favorite">♡</div>
+						<div class="buy">Book now</div>
+					</div>
+				</div>
+			</div>
+			<div class="tour">
+				<div class="img four"></div>
+				<div class="caption-tour">
+					<div class="card-title">
+						<h4>Title</h4>
+					</div>
+					<div class="reviews-price">
+						<div class="review"></div>
+						<div class="price">
+							<p>From</p>
+							700$
+						</div>
+					</div>
+					<div class="card-footer">
+						<div class="add-favorite">♡</div>
+						<div class="buy">Book now</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		О нас
+	</section>
 </body>
 </html>	
